feat: promotion in checkout
