# electro.api/Application/Features/ProductCatalog/GetPromotionHighlight/GetPromotionHighlightHandler.cs
@@ -21,8 +21,7 @@ namespace Application.Features.ProductCatalog.GetPromotionHighlight
             var bestPromotion = await _unitOfWork.ProductRepository.GetProductsQuery()
                 .Include(p => p.Promotion)
                 .Where(p => p.Status == ProductStatus.Active && p.StockQuantity > 0)
-                .Where(p => p.Promotion != null && p.Promotion.IsActive)
-                .Where(p => p.Promotion.StartDate <= now && p.Promotion.EndDate >= now)
+                .Where(p => p.Promotion != null && p.Promotion.IsActive &&  p.Promotion.StartDate <= now && p.Promotion.EndDate >= now)
                 .OrderByDescending(p => (p.Price.Amount - p.Promotion.PromotionalPrice.Amount) / p.Price.Amount)
                 .FirstOrDefaultAsync(cancellationToken);
 
